# dustycam

./: .gitignore  Makefile  README.md  install-dependencies.sh  install-service.sh  output.txt  pyproject.toml
dustycam/: commands.py  config.py  simple_capture.py  test_cam_config.py  test_motion.py  upload_photos.py  web_stream.py
dustycam/assets/: dusty.service
